# Chip-8-emulator

./: CMakeLists.txt  Instruction.txt
src/: main.cpp
